Доведение до возможности запуска, как дополнения

--- a/kodi-vk.inpos.ru/resources/language/English/strings.po
+++ b/kodi-vk.inpos.ru/resources/language/English/strings.po
@@ -31,3 +31,7 @@ msgstr "Friends"
 msgctxt "#400506"
 msgid "Groups"
 msgstr "Groups"
+
+msgctxt "#400507"
+msgid "Access token"
+msgstr "Access token"
