Добавил альбомы в моих видеозаписях

--- a/kodi-vk.inpos.ru/resources/language/English/strings.po
+++ b/kodi-vk.inpos.ru/resources/language/English/strings.po
@@ -44,6 +44,10 @@ msgctxt "#400509"
 msgid "All Videos"
 msgstr "All Videos"
 
+msgctxt "#400510"
+msgid "Video albums"
+msgstr "Video albums"
+
 
 
 msgctxt "#400601"
