--- a/kodi-vk.inpos.ru/resources/language/Russian/strings.po
+++ b/kodi-vk.inpos.ru/resources/language/Russian/strings.po
@@ -44,6 +44,10 @@ msgctxt "#400509"
 msgid "All Videos"
 msgstr "Все видеозаписи"
 
+msgctxt "#400510"
+msgid "Video albums"
+msgstr "Альбомы видеозаписей"
+
 
 
 msgctxt "#400601"
