--- a/kodi-vk.inpos.ru/changelog.txt
+++ b/kodi-vk.inpos.ru/changelog.txt
@@ -1,2 +1,5 @@
-v0.1.1 (2017-01-26)
+v0.1.0 (2017-01-29)
+- Сделан весь функционал фидеозаписей и фотографий
+
+v0.0.1 (2017-01-26)
 - Начальная версия. Работает авторизация для получения токена. Запускается только начальный экран
