--- a/kodi-vk.inpos.ru/changelog.txt
+++ b/kodi-vk.inpos.ru/changelog.txt
@@ -1,3 +1,6 @@
+v0.9.0 (2017-01-30)
+- Сделан весь функционал, кроме поиска
+
 v0.1.0 (2017-01-29)
 - Сделан весь функционал фидеозаписей и фотографий
 
