Добавлен поиск видео. 0.9.1

--- a/kodi-vk.inpos.ru/resources/language/English/strings.po
+++ b/kodi-vk.inpos.ru/resources/language/English/strings.po
@@ -56,7 +56,21 @@ msgctxt "#400512"
 msgid "Members"
 msgstr "Members"
 
+msgctxt "#400513"
+msgid "Users"
+msgstr "Users"
 
+msgctxt "#400514"
+msgid "Favorites"
+msgstr "Favorites"
+
+msgctxt "#400515"
+msgid "Search"
+msgstr "Search"
+
+msgctxt "#400516"
+msgid "New Search"
+msgstr "[B]New Search[/B]"
 
 msgctxt "#400601"
 msgid "Previous page"
