--- a/kodi-vk.inpos.ru/changelog.txt
+++ b/kodi-vk.inpos.ru/changelog.txt
@@ -1,5 +1,5 @@
 v0.9.1 (2017-01-31)
-- Добавлен поиск видеозаписей
+- Добавлены поиск видеозаписей и закладки
 
 v0.9.0 (2017-01-30)
 - Сделан весь функционал, кроме поиска
