--- a/kodi-vk.inpos.ru/changelog.txt
+++ b/kodi-vk.inpos.ru/changelog.txt
@@ -1,3 +1,6 @@
+v0.9.9 (2017-01-31)
+- Добавлен поиск сообществ и друзей. Основной функционал завершён.
+
 v0.9.1 (2017-01-31)
 - Добавлены поиск видеозаписей и закладки
 
