--- a/kodi-vk.inpos.ru/resources/language/English/strings.po
+++ b/kodi-vk.inpos.ru/resources/language/English/strings.po
@@ -66,7 +66,7 @@ msgstr "Favorites"
 
 msgctxt "#400515"
 msgid "Search"
-msgstr "Search"
+msgstr "[COLOR yellow]Search[/COLOR]"
 
 msgctxt "#400516"
 msgid "New Search"
