--- a/kodi-vk.inpos.ru/resources/language/Russian/strings.po
+++ b/kodi-vk.inpos.ru/resources/language/Russian/strings.po
@@ -66,7 +66,7 @@ msgstr "Закладки"
 
 msgctxt "#400515"
 msgid "Search"
-msgstr "Поиск"
+msgstr "[COLOR yellow]Поиск[/COLOR]"
 
 msgctxt "#400516"
 msgid "New Search"
