--- a/kodi-vk.inpos.ru/changelog.txt
+++ b/kodi-vk.inpos.ru/changelog.txt
@@ -1,3 +1,6 @@
+v1.0.0 (2017-02-03)
+- Подготовлена рабочая версия. Исправлены мелкие недочёты.
+
 v0.9.9 (2017-01-31)
 - Добавлен поиск сообществ и друзей. Основной функционал завершён.
 
