Отключил поддержку аудио. 1.0.2

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+v1.0.2 (2017-02-04)
+- Убрал дополнение из раздела Аудио.
+
+v1.0.1 (2017-02-04)
+- Исправил зависимости в метаданных
+
 v1.0.0 (2017-02-03)
 - Подготовлена рабочая версия. Исправлены мелкие недочёты.
 
