Информационные сообщения. Сделал выход из учётки. 1.1.0

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,11 @@
+v1.1.0 (2017-02-04)
+- Добавил информационнаые оповещения, где необходимо. Сделал пункт "Выход из учётной записи" главного экрана.
+
 v1.0.2 (2017-02-04)
 - Убрал дополнение из раздела Аудио.
 
 v1.0.1 (2017-02-04)
-- Исправил зависимости в метаданных
+- Исправил зависимости в метаданных.
 
 v1.0.0 (2017-02-03)
 - Подготовлена рабочая версия. Исправлены мелкие недочёты.
@@ -14,10 +17,10 @@ v0.9.1 (2017-01-31)
 - Добавлены поиск видеозаписей и закладки
 
 v0.9.0 (2017-01-30)
-- Сделан весь функционал, кроме поиска
+- Сделан весь функционал, кроме поиска.
 
 v0.1.0 (2017-01-29)
-- Сделан весь функционал фидеозаписей и фотографий
+- Сделан весь функционал фидеозаписей и фотографий.
 
 v0.0.1 (2017-01-26)
-- Начальная версия. Работает авторизация для получения токена. Запускается только начальный экран
+- Начальная версия. Работает авторизация для получения токена. Запускается только начальный экран.
