Добавил немного игрищ и блудниц. 1.2.0

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -124,6 +124,10 @@ msgctxt "#400529"
 msgid "No"
 msgstr "No"
 
+msgctxt "#400530"
+msgid "List length"
+msgstr "List length"
+
 msgctxt "#400601"
 msgid "Previous page"
 msgstr "[B]Previous page[/B]"
