--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+v1.2.0 (2017-02-12)
+- Сообщество или пользователя можно добавить в избранное из контекстного меню заголовка (Пользователь: или Сообщество:).
+- У каждой видеозаписи добавлен пункт контекстного меню с указанием владельца, через который можно перейти к странице.
+
 v1.1.0 (2017-02-04)
 - Добавил информационнаые оповещения, где необходимо. Сделал пункт "Выход из учётной записи" главного экрана.
 
