--- a/resources/language/Russian/strings.po
+++ b/resources/language/Russian/strings.po
@@ -125,8 +125,8 @@ msgid "No"
 msgstr "Нет"
 
 msgctxt "#400530"
-msgid "List length"
-msgstr "Длина списка"
+msgid "Items per Page"
+msgstr "Элементов на страницу"
 
 msgctxt "#400601"
 msgid "Previous page"
