--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+v1.2.2 (2017-06-03)
+- Теперь, после смены пароля на сайте, дополнение запрашивает авторизацию
+
 v1.2.0 (2017-02-12)
 - Сообщество или пользователя можно добавить в избранное из контекстного меню заголовка (Пользователь: или Сообщество:).
 - У каждой видеозаписи добавлен пункт контекстного меню с указанием владельца, через который можно перейти к странице.
