--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+v1.2.3 (2017-07-22)
+- Исправлено: Список групп обрезался до установленного в настройках значения
+
 v1.2.2 (2017-06-03)
 - Теперь, после смены пароля на сайте, дополнение запрашивает авторизацию
 
