--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+v1.2.5 (2018-05-24)
+- Исправлено: после начальной установки плагин не показывает приглашение лоина и пароля
+  и просто выходит
+
+v1.2.4 (2017-07-22)
+- Исправлено: начиная со второй страницы результатов поиска групп и людей
+  выдаются результаты поиска видеозаписей
+
 v1.2.3 (2017-07-22)
 - Исправлено: Список групп обрезался до установленного в настройках значения
 
